Fix to responsive header on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,8 @@ body {
     margin-top: 10px;
     background-color: var(--button-cta-bg-color);
     border: none;
-    border-radius: 4px;
-    padding: 10px;
+    border-radius: 20px;
+    padding: 10px 20px;
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
@@ -178,9 +178,11 @@ body {
     /*1. HEADER*/
 
     .header .nav {
+        width: auto;
         flex-direction: column;
         align-items: center;
         row-gap: 15px;
+        flex-shrink: 0;
     }
 
     /*2. MAIN*/
@@ -197,6 +199,7 @@ body {
     .main-hero--container {
         justify-content: space-around;
         align-items: center;
+        gap: 10px;
     }
 
     .main-hero--container .hero-introduction--container h2 {
